fixed the alignment for the question table

--- a/client-side/src/app/portals/Caliber/settings/screening/question/question.component.css
+++ b/client-side/src/app/portals/Caliber/settings/screening/question/question.component.css
@@ -48,7 +48,7 @@ h6 {
 #allQuestionsDiv{
   overflow : auto;
   height: 380px;
-  width: 700px;
+  width: 565px;
 }
 /*Custom scrollbar*/
 
